# toml-test-matrix

./: .gitignore  README.md  go.mod  go.sum  index.gohtml  index.html  main.go  new-parser.zsh  parsers.toml  run
output/: C-toml-c.html  Go-toml.html  c++-nullptr-toml.html  c++-toml++.html  c++-toml11.html  c-toml-c.html  c-tomlc99.html  cs-tomlet.html  cs-tomlyn.html  dart-toml.dart.html  deno-toml.html  fortran-toml-f.html  go-go-toml.html  go-toml.html  guile-toml.html  haskell-toml-parser.html  haskell-toml-reader.html  index.html  js-deno-toml.html  js-j-toml.html  js-smol-toml.html  js-toml-eslint-parser.html  lisp-clop.html  lua-tinytoml.html  ocaml-otoml.html  odin-toml_parser.html  python-toml.html  python-tomli.html  python-tomlkit.html  python-tomllib.html  racket-toml-racket.html  ruby-perfect_toml.html  ruby-toml-rb.html  ruby-tomlrb.html  rust-basic-toml.html  rust-boml.html  rust-taplo.html  rust-toml.html  rust-toml_edit.html  swift-TOMLDecoder.html
parsers/: ada-ada-toml.zsh  c++-nullptr-toml.zsh  c++-qt-toml.zsh  c++-toml11.zsh  c++-tomlcpp.zsh  chez-chez-toml.zsh  chicken-chicken-toml.zsh  (+68 more)
scripts/: Cargo.toml  c++-nullptr-toml-decoder  cs-tomlet-perf.cs  deno-toml-encoder.ts  js-deno-toml-decoder.ts  js-deno-toml-perf.ts  lua-tinytoml-decoder  ruby-perfect_toml-perf
scripts/rust-basic-toml/src/: decoder.rs  encoder.rs
scripts/rust-boml/src/: decoder.rs
scripts/rust-taplo/src/: decoder.rs  encoder.rs
scripts/rust-toml/src/: decoder.rs  encoder.rs
scripts/rust-toml_edit-perf/src/: main.rs
scripts/rust-toml_edit/src/: decoder.rs  encoder.rs
(+1 files in other folders)
