[workspace]
members = ["rust-*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
basic-toml = "0.1.10"
#boml = "1.0.1"
serde_json = "1.0.140"
taplo = { version = "0.13.2", features = ["serde"] }
toml = "0.8.20"
toml-test = "1.0.0"
toml-test-harness = "0.4.8"
toml_edit = "0.22.24"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
